@@ -1,3 +1,7 @@
+2004-05-21  Bradley Bell  <btb@icculus.org>
+
+	* include/gr.h: added missing define for menu fullscreen toggle
+
 2004-05-21  Matthew Mueller  <donut@dakotacom.net>
 
 	* arch/dos/joyc.c, arch/linux/joystick.c: use JOY_NUM_AXES instead
